# clash-royale-bot

./: .env.example  .gitignore  Cargo.toml
migrations/2021-12-16-153505_initial_migration/: down.sql  up.sql
migrations/2021-12-16-230359_last_updated/: down.sql  up.sql
src/: database.rs  main.rs  models.rs  schema.rs  update.rs
src/clashroyale/: api.rs
